# great-coral-reef

./: .gitignore  README.md  pyproject.toml
configs/: balance_rules.yaml  climate.yaml  corals.yaml  fauna.yaml  flora.yaml  instincts.yaml  soils.yaml  upgrades.yaml  version.yaml
notebooks/: analyze_card_volume.ipynb  analyze_fauna.ipynb  analyze_tournament_results.ipynb  analyze_turn_states.ipynb
scripts/: run_single_game.py  run_tournament.py  sweep_balance.py
scripts/__pycache__/: run_single_game.cpython-314.pyc.2402694240784  run_tournament.cpython-314.pyc.2402694240784  sweep_balance.cpython-314.pyc.2402694240784
src/reef_game/: __init__.py
src/reef_game.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_agent_labeling.py  test_climate.py  test_fauna.py  test_hand.py  test_instincts.py  test_long_term_agent.py  test_new_corals.py  test_paired_tournament.py  test_ponds.py  test_production.py  test_reproducibility.py  test_scoring.py  test_setup.py  test_simulation_smoke.py  test_soils.py  test_staghorn_pair.py  test_termination.py  test_tournament_artifacts.py  test_transitions.py  test_turn_states.py  test_upgrades.py  test_validators.py
tests/__pycache__/: conftest.cpython-314-pytest-9.0.3.pyc.15368  conftest.cpython-314-pytest-9.0.3.pyc.15932  conftest.cpython-314.pyc.2402705041488  test_climate.cpython-314-pytest-9.0.3.pyc.20744  test_climate.cpython-314-pytest-9.0.3.pyc.23348  test_climate.cpython-314-pytest-9.0.3.pyc.23900  test_climate.cpython-314.pyc.2402705041488  test_scoring.cpython-314.pyc.2402705041488  (+23 more)
(+88 files in other folders)
