[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reef-game"
version = "0.1.0"
description = "Deterministic board game engine and simulator for reef-themed balance testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyyaml>=6.0.1",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "rich>=13.7.1",
  "tqdm>=4.66.4",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []
